<resources>
    <string name="app_name">catpjak</string>
    <string name="title_home">Home</string>
    <string name="title_student">Student</string>
    <string name="title_books">Books</string>
    <string name="student_info_string">Леут Марія\nГрупа ІП-83\nЗК ІП-8313</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_button_text">Create</string>
    <string name="book_creation_title_text">Create a new book</string>
    <string name="title_creation_text">Title</string>
    <string name="title_creation_hint">Enter book title</string>
    <string name="subtitle_creation_text">Subtitle</string>
    <string name="price_creation_text">Price</string>
    <string name="subtitle_creation_hint">Enter book subtitle</string>
    <string name="price_creation_hint">Enter book`s price in USD</string>
    <string name="add_button_text">+</string>
    <string name="no_items_found_text">No items found :(</string>
    <string name="title_pictures">Pictures</string>
</resources>