<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ua.kpi.comsys.ip8313.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_student"
        android:name="ua.kpi.comsys.ip8313.ui.student.StudentFragment"
        android:label="@string/title_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="ua.kpi.comsys.ip8313.ui.books.BookContainerFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

</navigation>