<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/book_creation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="24sp"
            android:textColor="@color/light_gray"
            android:text="@string/book_creation_title_text" />
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_creation_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:text="@string/title_creation_text" />
        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/gray"
            android:inputType="text"
            android:hint="@string/title_creation_hint" />
        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:text="@string/subtitle_creation_text"/>
        <EditText
            android:id="@+id/subtitle_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/gray"
            android:inputType="text"
            android:hint="@string/subtitle_creation_hint" />
        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_edit"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:text="@string/price_creation_text"/>
        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_text"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/gray"
            android:inputType="number"
            android:hint="@string/price_creation_hint" />
        <Button
            android:id="@+id/book_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_edit"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:text="@string/create_button_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
